--- a/create.html
+++ b/create.html
@@ -61,8 +61,30 @@
     #viewport { 
         flex: 1; display: flex; justify-content: center; align-items: center; 
         background: #050505; position: relative; overflow: hidden; padding: 60px;
+        cursor: default;
     }
-    #canvas-container { position: relative; display: inline-block; }
+    #viewport.panning { cursor: grabbing; }
+    #canvas-container {
+        position: relative; display: inline-block;
+        transform-origin: center center;
+        will-change: transform;
+        transition: none;
+    }
+    /* Zoom level indicator */
+    #zoom-hud {
+        position: absolute; bottom: 12px; left: 50%; transform: translateX(-50%);
+        background: rgba(0,0,0,0.65); color: #fff; font-size: 11px; font-weight: 800;
+        padding: 4px 12px; border-radius: 8px; pointer-events: none;
+        opacity: 0; transition: opacity 0.3s; letter-spacing: 0.5px; z-index: 1000;
+        display: flex; align-items: center; gap: 8px;
+    }
+    #zoom-hud.visible { opacity: 1; }
+    #zoom-hud button {
+        pointer-events: all; background: rgba(255,255,255,0.15); border: none;
+        color: #fff; font-size: 10px; font-weight: 900; padding: 2px 6px;
+        border-radius: 4px; cursor: pointer; font-family: inherit;
+    }
+    #zoom-hud button:hover { background: rgba(255,255,255,0.3); }
     #comic-frame { 
         width: 600px; height: 600px; background: #fff; position: relative; 
         overflow: hidden; box-shadow: 0 10px 40px rgba(0,0,0,0.6); 
@@ -1420,6 +1442,10 @@
                 <div id="comic-frame" onclick="deselectLayer(event)"></div>
                 <div id="global-frame-indicator">FRAME 1</div>
             </div>
+            <div id="zoom-hud">
+                <span id="zoom-pct">100%</span>
+                <button onclick="vpResetZoom()">Reset</button>
+            </div>
         </div>
 
     </div><!-- /work-area -->
@@ -2381,9 +2407,10 @@
         }
         render();
     }
-    function handleExit() { 
-        if (frames && frames.length) saveOffline(true);
-        location.href = 'index.html'; 
+    function handleExit() {
+        // Save silently in background then navigate immediately
+        try { saveOffline(true); } catch(e) {}
+        location.href = 'index.html';
     }
     function flipHorizontal() { if(activeLayer) { saveState(); activeLayer.flipped = !activeLayer.flipped; render(); } }
     function createActionOption(src, name) { const div = document.createElement('div'); div.className = 'action-option'; div.innerHTML = `<img src="${src}"><span>${name}</span>`; return div; }
@@ -4095,7 +4122,136 @@
             header.style.cursor = 'grab';
         });
     })();
-</script>
+
+    // ══════════════════════════════════════════════════
+    // VIEWPORT ZOOM + PAN ENGINE
+    // - Mouse wheel: zoom centered on cursor
+    // - Middle mouse drag: pan
+    // - Space + left-drag: pan
+    // - Ctrl+0: reset, Ctrl+= zoom in, Ctrl+- zoom out
+    // ══════════════════════════════════════════════════
+    (function() {
+        const vp   = document.getElementById('viewport');
+        const cc   = document.getElementById('canvas-container');
+        const hud  = document.getElementById('zoom-hud');
+        const pct  = document.getElementById('zoom-pct');
+
+        let scale  = 1;
+        let ox = 0, oy = 0;   // pan offset in px
+        let hudTimer = null;
+        let isSpaceDown = false;
+        let isPanning = false;
+        let panStartX = 0, panStartY = 0;
+        let panOriginX = 0, panOriginY = 0;
+
+        function applyTransform() {
+            cc.style.transform = 'translate(' + ox + 'px,' + oy + 'px) scale(' + scale + ')';
+        }
+
+        function showHud() {
+            pct.innerText = Math.round(scale * 100) + '%';
+            hud.classList.add('visible');
+            clearTimeout(hudTimer);
+            hudTimer = setTimeout(() => hud.classList.remove('visible'), 1600);
+        }
+
+        window.vpResetZoom = function() {
+            scale = 1; ox = 0; oy = 0;
+            applyTransform();
+            showHud();
+        };
+
+        // ── Mouse Wheel: zoom centered on cursor ──
+        vp.addEventListener('wheel', function(e) {
+            e.preventDefault();
+            const rect = vp.getBoundingClientRect();
+            // Cursor position relative to viewport center
+            const cx = e.clientX - rect.left - rect.width / 2;
+            const cy = e.clientY - rect.top  - rect.height / 2;
+
+            const delta  = e.deltaY < 0 ? 1 : -1;
+            const factor = e.ctrlKey ? 0.05 : 0.12;  // pinch-zoom vs wheel
+            const newScale = Math.min(8, Math.max(0.08, scale * (1 + delta * factor)));
+            const ratio    = newScale / scale;
+
+            // Zoom toward cursor: adjust offset so point under cursor stays fixed
+            ox = cx + (ox - cx) * ratio;
+            oy = cy + (oy - cy) * ratio;
+            scale = newScale;
+            applyTransform();
+            showHud();
+        }, { passive: false });
+
+        // ── Middle-mouse drag to pan ──
+        vp.addEventListener('mousedown', function(e) {
+            // Middle mouse (button 1) OR Space+left (button 0)
+            const isMiddle = e.button === 1;
+            const isSpaceDrag = e.button === 0 && isSpaceDown;
+            if (!isMiddle && !isSpaceDrag) return;
+            e.preventDefault();
+            isPanning = true;
+            panStartX = e.clientX;
+            panStartY = e.clientY;
+            panOriginX = ox;
+            panOriginY = oy;
+            vp.classList.add('panning');
+        });
+
+        window.addEventListener('mousemove', function(e) {
+            if (!isPanning) return;
+            ox = panOriginX + (e.clientX - panStartX);
+            oy = panOriginY + (e.clientY - panStartY);
+            applyTransform();
+        });
+
+        window.addEventListener('mouseup', function(e) {
+            if (isPanning) {
+                isPanning = false;
+                vp.classList.remove('panning');
+            }
+        });
+
+        // ── Space key: switch to pan mode ──
+        window.addEventListener('keydown', function(e) {
+            if (e.code === 'Space' && !e.target.matches('input,textarea,[contenteditable]')) {
+                e.preventDefault();
+                if (!isSpaceDown) {
+                    isSpaceDown = true;
+                    vp.style.cursor = 'grab';
+                }
+            }
+            // Ctrl+0 reset, Ctrl+= zoom in, Ctrl+- zoom out
+            if (e.ctrlKey || e.metaKey) {
+                if (e.key === '0') { e.preventDefault(); vpResetZoom(); }
+                if (e.key === '=' || e.key === '+') {
+                    e.preventDefault();
+                    scale = Math.min(8, scale * 1.15);
+                    applyTransform(); showHud();
+                }
+                if (e.key === '-') {
+                    e.preventDefault();
+                    scale = Math.max(0.08, scale / 1.15);
+                    applyTransform(); showHud();
+                }
+            }
+        });
+        window.addEventListener('keyup', function(e) {
+            if (e.code === 'Space') {
+                isSpaceDown = false;
+                isPanning = false;
+                vp.classList.remove('panning');
+                vp.style.cursor = '';
+            }
+        });
+
+        // ── Prevent browser default Ctrl+scroll zoom ──
+        document.addEventListener('wheel', function(e) {
+            if (e.ctrlKey) e.preventDefault();
+        }, { passive: false });
+
+    })();
+
+    </script>
 
 <!-- ── iOS-style Float Toolbar ── -->
 <div id="ftb-pill">
