--- a/story.html
+++ b/story.html
@@ -62,12 +62,12 @@
             display: flex; flex-direction: column; gap: 0;
         }
         .story-page {
-            width: 100%; background: #fff; color: #111;
+            width: 100%; background: #fff !important; color: #111 !important;
             padding: 60px 70px;
             box-shadow: 0 4px 40px rgba(0,0,0,0.5);
             outline: none; font-size: 18px; line-height: 1.8;
             font-family: 'Merriweather', Georgia, serif;
-            caret-color: var(--accent);
+            caret-color: #ff6600;
             word-wrap: break-word;
             overflow-wrap: break-word;
             min-height: 900px;
