fixed story.html text

--- a/story.html
+++ b/story.html
@@ -61,6 +61,13 @@
             width: 100%; max-width: 760px;
             display: flex; flex-direction: column; gap: 0;
         }
+        .story-page,
+        .story-page *,
+        [data-theme] .story-page,
+        [data-theme] .story-page * {
+            color: #111 !important;
+            -webkit-text-fill-color: #111 !important;
+        }
         .story-page {
             width: 100%; background: #fff !important; color: #111 !important;
             padding: 60px 70px;
