--- a/create-mobile.html
+++ b/create-mobile.html
@@ -77,20 +77,26 @@
 
     /* ── LAYERS ── */
     .layer { position: absolute; cursor: move; user-select: none; transform-origin: center; touch-action: none; z-index: 10; }
-    .layer.active { outline: 2px solid var(--accent); outline-offset: 3px; z-index: 99 !important; }
+    .layer.active { outline: 1.5px solid var(--accent); outline-offset: 1px; z-index: 99 !important; }
 
     /* ── RESIZE HANDLES ── */
     .resize-handle {
-        position: absolute; width: 26px; height: 26px; z-index: 200;
-        background: var(--accent); border: 2px solid #000; border-radius: 5px;
+        position: absolute; width: 20px; height: 20px; z-index: 200;
+        background: var(--accent); border: 2px solid rgba(0,0,0,0.7); border-radius: 4px;
         touch-action: none; cursor: nwse-resize;
-        display: flex; align-items: center; justify-content: center;
-        font-size: 9px; font-weight: 900; color: #000;
+        /* Invisible tap area extends way beyond the visual */
     }
-    .resize-handle.tl { top: -13px; left: -13px; }
-    .resize-handle.tr { top: -13px; right: -13px; cursor: nesw-resize; }
-    .resize-handle.bl { bottom: -13px; left: -13px; cursor: nesw-resize; }
-    .resize-handle.br { bottom: -13px; right: -13px; }
+    /* Huge invisible tap target — the actual touchable area is 48x48 */
+    .resize-handle::after {
+        content: ''; position: absolute;
+        top: -14px; left: -14px; right: -14px; bottom: -14px;
+    }
+    .resize-handle.tl { top: -10px; left: -10px; }
+    .resize-handle.tr { top: -10px; right: -10px; cursor: nesw-resize; }
+    .resize-handle.bl { bottom: -10px; left: -10px; cursor: nesw-resize; }
+    .resize-handle.br { bottom: -10px; right: -10px; }
+    /* Thin clean selection border like the reference app */
+    .layer.active { outline: 1.5px solid var(--accent); outline-offset: 2px; z-index: 99 !important; }
 
     /* ── BUBBLE STYLES (same as PC) ── */
     .speech-bubble { padding: 12px 16px; background: #fff; color: #000; font-weight: 800; text-align: center; min-width: 50px; position: relative; word-wrap: break-word; line-height: 1.35; }
@@ -1265,35 +1271,45 @@ function render() {
                 h.textContent = corner === 'br' ? '⤡' : corner === 'tl' ? '⤡' : '';
                 h.addEventListener('touchstart', (ev) => {
                     ev.preventDefault(); ev.stopPropagation();
+                    saveState();
                     const t0 = ev.touches[0];
                     const origW = layer.w, origX = layer.x, origY = layer.y;
                     const startClientX = t0.clientX;
                     const startClientY = t0.clientY;
                     const isLeft = (corner === 'tl' || corner === 'bl');
                     const isTop  = (corner === 'tl' || corner === 'tr');
+                    const layerEl = document.querySelector('.layer[data-layerId="' + layer.id + '"]');
                     const onMove = (mv) => {
+                        if (mv.touches.length > 1) return;
                         mv.preventDefault();
-                        // Use the larger of horizontal or vertical delta for more responsive feel
                         const rawDx = (mv.touches[0].clientX - startClientX) / vpScale;
                         const rawDy = (mv.touches[0].clientY - startClientY) / vpScale;
-                        // For corners: use horizontal delta primarily, with diagonal boost
-                        const dx = isLeft
-                            ? -(Math.abs(rawDx) > Math.abs(rawDy) ? rawDx : -rawDy)
-                            :  (Math.abs(rawDx) > Math.abs(rawDy) ? rawDx :  rawDy);
-                        const newW = Math.max(30, Math.round(origW + (isLeft ? -dx : dx)));
+                        // Use diagonal magnitude for proportional, natural scaling
+                        // Direction: pulling corner OUT = bigger, pushing IN = smaller
+                        const diag = isLeft ? -rawDx : rawDx;
+                        const diagV = isTop ? -rawDy : rawDy;
+                        // Average horizontal + vertical so both axes contribute equally
+                        const delta = (diag + diagV) / 2;
+                        const newW = Math.max(20, Math.round(origW + delta));
                         layer.w = newW;
                         if (isLeft) layer.x = origX + (origW - newW);
-                        // sync slider if transform sheet is open
+                        if (isTop)  layer.y = origY + (origW - newW) * (layer.h || layer.w) / layer.w || 0;
+                        // Update DOM directly for instant feel
+                        if (layerEl) {
+                            layerEl.style.width = newW + 'px';
+                            if (isLeft) layerEl.style.left = layer.x + 'px';
+                        }
+                        // Sync slider if transform sheet open
                         const sl = document.getElementById('size-slider');
                         if (sl) { sl.value = newW; const sn = document.getElementById('size-num'); if (sn) sn.value = newW; }
-                        render();
                     };
                     const onUp = () => {
                         document.removeEventListener('touchmove', onMove);
                         document.removeEventListener('touchend', onUp);
+                        render(); // full re-render on release
                     };
                     document.addEventListener('touchmove', onMove, { passive: false });
-                    document.addEventListener('touchend', onUp);
+                    document.addEventListener('touchend', onUp, { once: true });
                 }, { passive: false });
                 el.appendChild(h);
             });
@@ -1337,6 +1353,7 @@ function startTouchDrag(e, layer) {
     var layerStartX = layer.x;
     var layerStartY = layer.y;
     var stateSaved = false;
+    // Cache the DOM element now so we don't querySelector on every move event
     var layerEl = document.querySelector('.layer[data-layerId="' + layer.id + '"]');
 
     var cleanup = function() {
@@ -1344,7 +1361,7 @@ function startTouchDrag(e, layer) {
         document.removeEventListener('touchend', up);
         document.removeEventListener('touchcancel', up);
         if (_isDragging) render();
-        setTimeout(function() { _isDragging = false; }, 80);
+        setTimeout(function() { _isDragging = false; }, 60);
     };
     var move = function(me) {
         if (me.touches.length > 1) { cleanup(); return; }
@@ -1352,14 +1369,18 @@ function startTouchDrag(e, layer) {
         var t = me.touches[0];
         var rawDx = t.clientX - fingerStartX;
         var rawDy = t.clientY - fingerStartY;
-        // 4px dead zone prevents accidental drag on tap
-        if (!_isDragging && Math.hypot(rawDx, rawDy) < 4) return;
+        // 3px dead zone — prevents taps accidentally triggering drag state
+        if (!_isDragging && Math.hypot(rawDx, rawDy) < 3) return;
+        // Save state only once, at the moment drag is confirmed
         if (!stateSaved) { saveState(); stateSaved = true; }
         _isDragging = true;
         layer.x = layerStartX + rawDx / vpScale;
         layer.y = layerStartY + rawDy / vpScale;
-        // Direct DOM update for instant feedback
-        if (layerEl) { layerEl.style.left = layer.x + 'px'; layerEl.style.top = layer.y + 'px'; }
+        // Direct DOM update = no re-render needed during drag, silky smooth
+        if (layerEl) {
+            layerEl.style.left = layer.x + 'px';
+            layerEl.style.top  = layer.y + 'px';
+        }
     };
     var up = function() { cleanup(); };
     document.addEventListener('touchmove', move, { passive: false });
@@ -1367,6 +1388,7 @@ function startTouchDrag(e, layer) {
     document.addEventListener('touchcancel', up, { once: true });
 }
 
+// ── TOUCH PINCH RESIZE (2-finger spread/pinch on active sprite) ──
 function startTouchPinchResize(e, layer) {
     saveState();
     const t0 = e.touches[0], t1 = e.touches[1];
@@ -1901,8 +1923,7 @@ async function finalPublish() {
     const swipeDir = localStorage.getItem('cc-swipe-dir') || 'horizontal';
     const payload = {
         title, description: desc, tags, cover: finalCoverBase64,
-        data: frames, swipe_dir: swipeDir,
-        canvas_ratio: canvasRatio
+        data: frames, swipe_dir: swipeDir, canvas_ratio: canvasRatio
     };
     let error;
     if (editingComicId) {
